--- a/TranslationReg/Style/containers/containers.css
+++ b/TranslationReg/Style/containers/containers.css
@@ -1,7 +1,7 @@
 
 /*------------------------------------ тнплш днаюбкемхъ ------------------------------------*/
 .dynamic-block-create {
-    margin-bottom: 40px;
+    padding-bottom: 40px;
     max-width: 600px;
 }
 
