--- a/TranslationReg/Style/style.css
+++ b/TranslationReg/Style/style.css
@@ -1,7 +1,7 @@
 * {
     padding: 0;
     margin: 0;
-    font-family: "Open Sans", Helvetica, Arial, sans-serif;
+    font-family: "Roboto","Open Sans", Helvetica, Arial, sans-serif;
 }
 
 h2 {
