--- a/TranslationReg/Views/Account/Login.cshtml
+++ b/TranslationReg/Views/Account/Login.cshtml
@@ -34,9 +34,9 @@
                     @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
                 </div>
 
-                <div>
+                <div class="">
                     <a href="/Account/Register" class="btn btn-default btn-form">К регистрации</a>
-                    <input type="submit" value="Войти" class="btn btn-default btn-form" style="float:left; margin-left:100px;"/>
+                    <input type="submit" value="Войти" class="btn btn-default btn-form"/>
                 </div>
             }
         </div>
