--- a/TranslationReg/Views/DocStages/CreateModal.cshtml
+++ b/TranslationReg/Views/DocStages/CreateModal.cshtml
@@ -42,14 +42,14 @@
                 <div class="modal-row">
                     <div class="modal-property"><p>Начальный файл:</p></div>
                     <div class="modal-value">
-                        <input type="file" name="stageOriginal" />
+                        <input type="file" name="stageOriginal" required/>
                     </div>
                 </div>
             </div>
 
             <!-- Подтверждение\отмена -->
             <div class="modal-footer">
-                <input type="submit" value="Сохранить" class="btn hide-modal btn-modal" />
+                <input type="submit" value="Сохранить" class="btn hide-modal btn-modal btn-modal-save" />
                 <button type="button" class="btn btn-default btn-cancel btn-modal" data-dismiss="modal">Отмена</button>
             </div>
         }
