--- a/TranslationReg/Views/Shared/_Layout.cshtml
+++ b/TranslationReg/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     @Styles.Render("~/Style/css")
     @Scripts.Render("~/bundles/modernizr")
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
     <div class="content-container">
@@ -197,9 +198,9 @@
             float: left;
             background-color: #241717;
             overflow: hidden;
-            background-color: #0b2046ad;
+            background-color: #3d5279;
             background-size: cover;
-            box-shadow: 5px 1px 6px 1px rgba(0, 0, 0, 0.4);
+            box-shadow: 2px 0 1px 0px rgba(0, 0, 0, 0.3)
         }
 
         .content-container .right-partial {
@@ -220,11 +221,11 @@
     }
 
         .menu .menu-header {
-            height: 20%;
+            height: 25%;
         }
 
         .menu .menu-content {
-            height: 70%;
+            height: 65%;
         }
 
         .menu .menu-footer {
@@ -242,7 +243,7 @@
         color: white;
         height: 50px;
         padding: 10px;
-        font-size: 18px;
+        font-size: 16px;
         border-top: 1px solid #27395abf;
         position: relative;
         padding-left: 70px;
