--- a/TranslationReg/Views/User_Stage/ListItem.cshtml
+++ b/TranslationReg/Views/User_Stage/ListItem.cshtml
@@ -45,6 +45,7 @@
     </div>
 
     <!-- Результат -->
+    <!--  
     <div class="col-md-1">
         <div class="icons-container">
             <a class="loadModal" data-href="/User_Stage/AddResultFile/@Model.Id">
@@ -52,10 +53,14 @@
             </a>
         </div>
     </div>
+    -->
 
     <!-- Команды -->
-    <div class="col-md-1">
+    <div class="col-md-2">
         <div class="icons-container">
+            <a class="loadModal" data-href="/User_Stage/AddResultFile/@Model.Id">
+                <i class="material-icons">file_upload</i>
+            </a>
             <a class="loadModal" data-href="/User_Stage/Edit/@Model.Id" data-ajax-update="#@(Model.Id)">
                 <i class="material-icons">mode_edit</i>
             </a>
