--- a/TranslationReg/Views/User_Stage/Tasks.cshtml
+++ b/TranslationReg/Views/User_Stage/Tasks.cshtml
@@ -4,7 +4,7 @@
 <h2>Мои задачи</h2>
 
 <!-- ФИЛЬТРЫ -->
-<div class="filterContainer">
+<div class="buttonsContainer">
     <ul class="filters">
         <li>
             <a class="filter filter-active" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#tasksList" href="/User_stage/InWork">Текущие задачи</a>
