--- a/TranslationReg/Views/Documents/Index.cshtml
+++ b/TranslationReg/Views/Documents/Index.cshtml
@@ -10,7 +10,7 @@
 <div id="addDoc" class="dynamicBlock"></div>
 
 <!-- ФИЛЬТРЫ -->
-<div class="filterContainer">
+<div class="buttonsContainer">
     <ul class="filters">
         <li>
             <a class="filter filter-active" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#docList" href="/Documents/All">
