--- a/TranslationReg/Views/Projects/Index.cshtml
+++ b/TranslationReg/Views/Projects/Index.cshtml
@@ -11,7 +11,7 @@
 <div id="addProj" class="dynamicBlock"></div>
 
 <!-- ФИЛЬТРЫ -->
-<div class="filterContainer">
+<div class="buttonsContainer">
     <ul class="filters">
         <li>
             <a class="filter filter-active" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#projectList" href="/Projects/InWork">Проекты в работе</a>
