Добавление работы в модалке

--- a/TranslationReg/Style/buttons/filters.css
+++ b/TranslationReg/Style/buttons/filters.css
@@ -20,7 +20,7 @@
         }
 
             .filters li a:hover {
-                background: #2b66d2;
+                background: #c42d5b;
             }
 
 .filter-active {
