--- a/TranslationReg/Views/Projects/Project.cshtml
+++ b/TranslationReg/Views/Projects/Project.cshtml
@@ -219,8 +219,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        background-color: #45295f;
-        background-color: #45295fed;
+        background-color: #5580aa;
         color: white;
     }
 
@@ -264,7 +263,6 @@
     .dropdown-btn {
         float: right;
         width: 100px;
-        border-left: 1px solid #2a3a65;
     }
 
         .dropdown-btn > i {
