--- a/TranslationReg/Views/Shared/_Layout.cshtml
+++ b/TranslationReg/Views/Shared/_Layout.cshtml
@@ -192,7 +192,7 @@
     }
 
         .content-container .left-menu {
-            width: 280px;
+            width: 250px;
             height: 100%;
             display: block;
             float: left;
@@ -200,7 +200,7 @@
             overflow: hidden;
             background-color: #3d5279;
             background-size: cover;
-            box-shadow: 2px 0 1px 0px rgba(0, 0, 0, 0.3)
+            box-shadow: 2px 0 1px 0px rgba(0, 0, 0, 0.3);
         }
 
         .content-container .right-partial {
@@ -241,14 +241,16 @@
         justify-content: flex-start;
         flex-flow: row wrap;
         color: white;
-        height: 50px;
+        height: 40px;
         padding: 10px;
-        font-size: 16px;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
         border-top: 1px solid #27395abf;
         position: relative;
-        padding-left: 70px;
+        padding-left: 50px;
         cursor: pointer;
-        text-decoration:none;
+        text-decoration: none;
     }
 
         .main-menu-button p,
@@ -257,7 +259,6 @@
             text-decoration: none;
             align-self: center;
             cursor: pointer;
-            font-weight: 500;
             margin: 0;
         }
 
@@ -271,7 +272,7 @@
     }
 
     .menu-content > ul > li:hover {
-        transition:0.2s;
+        transition: 0.2s;
         background-color: #c42d5b;
     }
 </style>
