--- a/TranslationReg/Style/buttons/filters.css
+++ b/TranslationReg/Style/buttons/filters.css
@@ -10,7 +10,7 @@
 
         .filters li a {
             display: block;
-            padding: 8px 10px;
+            padding: 6px 10px;
             color: white;
             text-decoration: none;
             transition: 0.3s;
@@ -28,8 +28,8 @@
     color: #c42d5b !important;
 }
 
-.buttonsContainer{
-    padding-left:50px;
+.buttonsContainer {
+    padding-left: 50px;
 }
 
 .buttons {
@@ -37,12 +37,14 @@
     padding: 0;
     margin-bottom: 15px;
 }
+
     .buttons li {
         display: inline-block;
     }
+
         .buttons li div {
             display: flex;
-            padding: 8px 10px;
+            padding: 6px 10px;
             text-decoration: none;
             transition: 0.3s;
             background: #3d5279;
@@ -51,12 +53,15 @@
             box-shadow: 0px 3px 6px rgba(0,0,0,0.3);
             margin: 5px;
         }
+
             .buttons li div:hover {
                 color: #d41955 !important;
                 background-color: white;
                 box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6);
             }
 
-.disabled-filter-btn{
-    background-color: darkslategrey;
+.disabled-filter-btn {
+    background-color: #585267 !important;
+    color: white !important;
+    cursor: not-allowed;
 }
