--- a/TranslationReg/Views/DocStages/Delete.cshtml
+++ b/TranslationReg/Views/DocStages/Delete.cshtml
@@ -5,7 +5,7 @@
         <!-- Хедер -->
         <div class="modal-header delete-header">
             <h4 class="modal-title">Удаление стадии "@Model.WorkType.Name"</h4>
-            <p type="button" class="close" data-dismiss="modal">&times;</p>
+            <i data-dismiss="modal" class="material-icons close">clear</i>
         </div>
 
         <!-- Тело -->
