--- a/TranslationReg/Views/LanguagePairs/Delete.cshtml
+++ b/TranslationReg/Views/LanguagePairs/Delete.cshtml
@@ -6,7 +6,7 @@
         <!-- Хедер -->
         <div class="modal-header  delete-header">
             <h4 class="modal-title">Удаление языковой пары "@Model.Name"</h4>
-            <p type="button" class="close" data-dismiss="modal">&times;</p>
+            <i data-dismiss="modal" class="material-icons close">clear</i>
         </div>
 
         <!-- Тело -->
