--- a/TranslationReg/Views/Projects/Edit.cshtml
+++ b/TranslationReg/Views/Projects/Edit.cshtml
@@ -39,6 +39,11 @@
             @Html.ValidationMessageFor(model => model.Project.ProjectStatuseId, "", new { @class = "text-danger" })
         </div>
 
+        <div class="form-group">
+            @Html.LabelFor(model => model.Project.Deadline, "Дедлайн")
+            <input type="date" name="Project.Deadline" value="@Model.Project.Deadline.Value.ToString("yyyy-MM-dd")" required />
+        </div>
+
 
         <input type="submit" value="Сохранить" class="btn btn-default btn-form" />
 
