--- a/TranslationReg/Views/Projects/EditModal.cshtml
+++ b/TranslationReg/Views/Projects/EditModal.cshtml
@@ -1,20 +1,20 @@
-﻿@model TranslationRegistryModel.Document
+﻿@model TranslationReg.Models.ProjectModel
 
 <div class="modal-dialog">
     <div class="modal-content">
-        @using (Html.BeginForm("Edit", "Documents", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
+        @using (Html.BeginForm("Edit", "Projects", null, FormMethod.Post))
         {
             @Html.AntiForgeryToken()
+
+
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            @Html.HiddenFor(model => model.Id)
-            @Html.HiddenFor(model => model.OwnerId)
-            @Html.HiddenFor(model => model.OriginalFileId)
-            @Html.HiddenFor(model => model.FinalFileId)
-            @Html.HiddenFor(model => model.Date)
+            @Html.HiddenFor(model => model.Project.Id)
+            @Html.HiddenFor(model => model.Project.CreatorId)
+            @Html.HiddenFor(model => model.Project.Date)
 
             <!-- Хедер -->
             <div class="modal-header  blue-modal-header">
-                <h4 class="modal-title">Редактирование документа</h4>
+                <h4 class="modal-title">Редактирование проекта</h4>
                 <i data-dismiss="modal" class="material-icons close">clear</i>
             </div>
 
@@ -23,39 +23,40 @@
                 <h3>Вы уверены, что хотите изменить данную запись?</h3>
 
                 <div class="modal-row">
-                    <div class="modal-property"><p>Создатель:</p></div>
+                    <div class="modal-property"><p>Создатель</p></div>
                     <div class="modal-value">
-                        @Html.EditorFor(model => model.Owner.Name, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
+                        @Html.EditorFor(model => model.Project.Creator.Name, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
                     </div>
                 </div>
 
                 <div class="modal-row">
-                    <div class="modal-property"><p>Название:</p></div>
+                    <div class="modal-property"><p>Наименование</p></div>
                     <div class="modal-value">
-                        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", required = "required" } })
+                        @Html.EditorFor(model => model.Project.Name, new { htmlAttributes = new { @class = "form-control", required = "required" } })
                     </div>
                 </div>
 
                 <div class="modal-row">
-                    <div class="modal-property"><p>Проект:</p></div>
+                    <div class="modal-property"><p>Языковая пара</p></div>
                     <div class="modal-value">
-                        @Html.DropDownList("ProjectId", null, htmlAttributes: new { @class = "form-control", required = "required" })
+                        @Html.DropDownListFor(model => model.Project.LanguagePairId, Model.LanguagePairs, new { @class = "form-control", required = "required" })
                     </div>
                 </div>
 
                 <div class="modal-row">
-                    <div class="modal-property"><p>Файл оригинала:</p></div>
+                    <div class="modal-property"><p>Статус</p></div>
                     <div class="modal-value">
-                        <input type="file" name="newOriginalFile" />
+                        @Html.DropDownListFor(model => model.Project.ProjectStatuseId, Model.ProjectStatus, new { @class = "form-control", required = "required" })
                     </div>
                 </div>
 
                 <div class="modal-row">
-                    <div class="modal-property"><p>Количество слов:</p></div>
+                    <div class="modal-property"><p>Дедлайн</p></div>
                     <div class="modal-value">
-                        @Html.EditorFor(model => model.WordsNumber, new { htmlAttributes = new { @class = "form-control", required = "required" } })
+                        <input type="date" name="Project.Deadline" value="@Model.Project.Deadline.Value.ToString("yyyy-MM-dd")" required />
                     </div>
                 </div>
+
             </div>
 
             <!-- Подтверждение\отмена -->
