--- a/TranslationReg/Views/Projects/List.cshtml
+++ b/TranslationReg/Views/Projects/List.cshtml
@@ -46,7 +46,7 @@
             </div>
             <div class="col-md-2">
                 <div class="icons-container">
-                    <a href="/Projects/Edit/@project.Id">
+                    <a data-href="/Projects/EditModal/@project.Id" class="loadModal">
                         <i class="material-icons">mode_edit</i>
                     </a>
                     <a data-href="/Projects/Delete/@project.Id" class="loadModal" data-dialog-title="Удаление проекта и содержимого">
