--- a/TranslationReg/Views/User_Stage/AddResultFile.cshtml
+++ b/TranslationReg/Views/User_Stage/AddResultFile.cshtml
@@ -7,7 +7,7 @@
             <!-- Хедер -->
             <div class="modal-header blue-modal-header">
                 <h4 class="modal-title">Выполнение задачи</h4>
-                <p type="button" class="close" data-dismiss="modal">&times;</p>
+                <i data-dismiss="modal" class="material-icons close">clear</i>
             </div>
 
             <!-- Тело -->
