--- a/TranslationReg/Views/User_Stage/ListItemEdit.cshtml
+++ b/TranslationReg/Views/User_Stage/ListItemEdit.cshtml
@@ -9,7 +9,7 @@
             <!-- Хедер -->
             <div class="modal-header blue-modal-header">
                 <h4 class="modal-title">Редактирование задачи</h4>
-                <p type="button" class="close" data-dismiss="modal">&times;</p>
+                <i data-dismiss="modal" class="material-icons close">clear</i>
             </div>
 
             <!-- Тело -->
