--- a/TranslationReg/Views/WorkTypes/Delete.cshtml
+++ b/TranslationReg/Views/WorkTypes/Delete.cshtml
@@ -5,7 +5,7 @@
         <!-- Хедер -->
         <div class="modal-header  delete-header">
             <h4 class="modal-title">Удаление типа работ "@Model.Name"</h4>
-            <p type="button" class="close" data-dismiss="modal">&times;</p>
+            <i data-dismiss="modal" class="material-icons close">clear</i>
         </div>
 
         <!-- Тело -->
