--- a/TranslationReg/Style/cards/docCard.css
+++ b/TranslationReg/Style/cards/docCard.css
@@ -18,7 +18,7 @@
     display: flex;
     justify-content: space-between;
     align-content: center;
-    padding: 0 10px;
+    padding: 0 6px;
 }
 
 .doc-card img {
@@ -49,11 +49,14 @@
 .doc-card-header {
     min-height: 36px;
     padding: 0 10px;
-    justify-content: space-between;
+    display:flex;
+    justify-content: center;
 }
 
     .doc-card-header p {
         align-self: center;
+        margin:0px;
+        padding: 3px 0;
     }
 
 .doc-next-stage i,
@@ -76,16 +79,14 @@
     font-size: 14px;
 }
 
-.icons-column > hr {
-    margin: 0;
-    padding: 0;
-}
-
 
 .icons-column {
     display: flex;
     flex-flow: column;
     justify-content: space-around;
     max-width: 40px;
-    padding: 4px 0;
+    padding: 5px;
+}
+.icons-column i{
+    color:#337ab7;
 }
